# fit_galgo

./: .gitignore  DEVELOPMENT.md  README.md  main.py  main_fit.py  main_pool_process.py  main_process.py  main_process_threads.py  main_seq.py  main_thread.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  use_cases.org
fit_galgo/: galgo.py
fit_galgo/fit/: definitions.py  exceptions.py  messages.py  models.py  parsers.py  results.py
fit_galgo/logging/: logging.py
fit_galgo/utils/: date_utils.py
tests/: test_fit_files.py  test_fit_hrv.py  test_fit_models.py  test_fit_monitoring.py  test_fit_parse_climb_activities.py  test_fit_parse_distance_activities.py  test_fit_parse_lap_activities.py  test_fit_parse_multisport_activity.py  test_fit_parse_set_activities.py  test_fit_sleep.py
